--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,10 @@
   "author": "dani54196",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1"
   }
 }
