upload files to backend with multer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "27017:27017"
     env_file:
       - ./backend/.env
+    command: mongod --auth
     # volumes:
     #   - mongodb_data:/data/db
 
