--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,48 @@
 version: '3.8'
 
 services:
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: frontend
+    restart: unless-stopped
+    ports:
+      - "80:8000"
+    volumes:
+      - ./frontend:/app
+    depends_on:
+      - backend
+    # env_file:
+    #   - ./frontend/.env
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: backend
+    restart: unless-stopped
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./backend:/app
+    env_file:
+      - ./backend/.env
+    depends_on:
+      - mongodb
+
   mongodb:
     image: mongo:latest
     container_name: mongodb
-    # restart: unless-stopped
+    restart: unless-stopped
     ports:
       - "27017:27017"
     env_file:
       - ./backend/.env
     command: mongod --auth
-    # volumes:
-    #   - mongodb_data:/data/db
+    volumes:
+      - mongodb_data:/data/db
 
-# volumes:
-#   mongodb_data:
-#     driver: local
+volumes:
+  mongodb_data:
+    driver: local
