--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
-# Use node.js 18.20.1 as the base image
-FROM node:18.20.1
+# Use node.js as the base image
+FROM node:18-alpine
 # Set the working directory in the container
 WORKDIR /app
 # Copy the package.json file into the container at /frontend
