--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   frontend:
@@ -13,8 +13,8 @@ services:
       - ./frontend:/app
     depends_on:
       - backend
-    # env_file:
-    #   - ./frontend/.env
+    env_file:
+      - ./frontend/.env
 
   backend:
     build:
