host docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     networks:
       - app-network
     extra_hosts:
-      - "backend:host-gateway"
+      - "host.docker.internal:host-gateway"
 
   backend:
     build:
