--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "author": "dani54196",
   "license": "MIT",
   "dependencies": {
+    "archiver": "^7.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
